tests/models/struct/named/i64/pass/default.rs
use dade::model;
#[model]
struct TestModel {
    #[field(default = 2)]
    value: i64,
}
fn main() {}
