tests/models/struct/named/i64/fail/default.rs
use dade::model;
#[model]
struct TestModel {
    #[field(default = 2.0)]
    value: i64,
}
fn main() {}
